--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "author": "lcdada <15810227932@163.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --host 0.0.0.0 --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js"
   },
   "dependencies": {
     "axios": "^0.18.1",
+    "babel-polyfill": "^6.26.0",
     "better-scroll": "^1.15.2",
     "fastclick": "^1.0.6",
     "stylus": "^0.54.5",
@@ -18,6 +19,7 @@
     "vant": "^2.0.0",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^2.6.7",
+    "vue-drawer-layout": "^1.3.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
   },
