--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^2.6.7",
     "vue-drawer-layout": "^1.3.0",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1",
     "vuex-persistedstate": "^2.5.4"
