--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-drawer-layout": "^1.3.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
+    "vue-wechat-title": "^2.0.5",
     "vuex": "^3.1.1",
     "vuex-persistedstate": "^2.5.4"
   },
